# ChronicleMap

./: .gitignore  .pre-commit-config.yaml  ChronicleMap.spec  LICENSE  README.md  foremr_prompt.md  pyproject.toml  run_app.py
.github/workflows/: ci.yml  release.yml
chroniclemap/: __init__.py
chroniclemap/core/: models.py
chroniclemap/gui/: __main__.py  campaign_detail.py  campaign_manager.py  campaign_store.py  import_widget.py  player_window.py  snapshot_confirm.py  storage_adapter.py  texts.py
chroniclemap/gui/locales/: en.json  zh_CN.json
chroniclemap/services/: storage_service.py
chroniclemap/storage/: manager.py
chroniclemap/temporal/: engine.py
chroniclemap/ui/: campaign_manager.py  import_dialog.py  main_window.py  player_viewmodel.py  viewmodels.py  workers.py
chroniclemap/ui/widgets/: canvas_view.py
chroniclemap/vision/: ocr.py
tests/: test_campaign_manager.py  test_import_widget.py  test_models.py  test_ocr.py  test_ocr_roi.py  test_ocr_tesseract_integration.py  test_player_viewmodel.py  test_smoke.py  test_storage.py  test_storage_ocr.py  test_temporal.py  test_tesseract_integration_real_image.py
